--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
 	background: #F3EBE9;
 	font-size: 100%;
-	font-family: 'Times New Roman', serif; 
+	font-family: 'Times New Roman', serif;
 }
 
 .wrapper {
@@ -18,3 +18,42 @@ body {
 }
 
 /* Write all remaining styles here */
+h1 {
+	padding-bottom: 10px;
+	margin: 0 0 5px;
+	font-size: 5em;
+	font-weight: normal;
+	font-family: 'Baskerville', serif;
+	border-bottom: 1px solid #ccc;
+}
+
+h2 {
+	display: block;
+	font-size: 1.5em;
+	margin-block-start: 0.83em;
+	margin-block-end: 0.83em;
+	margin-inline-start: 0px;
+	margin-inline-end: 0px;
+	font-weight: bold;
+
+
+}
+
+#feature {
+border: 5px rgb(152,173,166) solid;
+
+}
+
+p {
+	color: #555;
+	    font-size: 1em;
+	    margin: 0 0 20px 0;
+
+}
+
+
+#press img {
+
+	border: 5px #ccc solid;
+padding: 1px;
+}
